api/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discussion-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: discusswithme.com
      http:
        paths:
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments
                port:
                  number: 5000
          - path: /topics
            pathType: Prefix
            backend:
              service:
                name: topics
                port:
                  number: 5000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 5000
